Change project base path label
- root path is too confusing
- this is a breaking change for the configurations.